Edited makefile to include unittest2

--- a/projects/kittrela/dominion/Makefile
+++ b/projects/kittrela/dominion/Makefile
@@ -8,8 +8,13 @@ unittestresults.out: unittest1.c dominion.c rngs.c assertTrue.c
 	unittest1 >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	
+	echo "Result for running unittest2:" > unittestresults.out
+	gcc -o unittest2 dominion.c rngs.c unittest2.c assertTrue.c $(CFLAGS)
+	unittest2 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
+	
 clean:
 	rm -f unittestresults.out
 	
 cleanall:
-	rm -f unittestresults.out unittest1*.gcda *.gcno *.gcov
+	rm -f unittestresults.out unittest1 unittest2*.gcda *.gcno *.gcov
