Created make and random test classes

--- a/dominion/Makefile
+++ b/dominion/Makefile
@@ -1,39 +1,30 @@
-CFLAGS = -Wall -fpic -coverage -lm
+CFLAGS = -Wall -fpic -fprofile-arcs -ftest-coverage -coverage -lm
 
-rngs.o: rngs.h rngs.c
-	gcc -c rngs.c -g  $(CFLAGS)
+default: unittestresults.out
 
-dominion.o: dominion.h dominion.c rngs.o
-	gcc -c dominion.c -g  $(CFLAGS)
+unittestresults.out: randomtestadventurer.c dominion.c rngs.c assertTrue.c
+	echo "Result for running Random Test Adventure:" > randomtestadventurer.out
+	gcc -o randomtestadventurer randomtestadventurer.c dominion.c rngs.c assertTrue.c $(CFLAGS)
+	randomtestadventurer >> randomtestadventurer.out
+	gcov dominion.c >> randomtestadventurer.out
+	echo
+	gcov dominion.c -b -f >> randomtestadventurer.out
+	
+	echo "Result for running randomtestcard1:" > randomtestcard1.out
+	gcc -o randomtestcard1 randomtestcard1.c dominion.c rngs.c assertTrue.c $(CFLAGS)
+	randomtestcard1 >> randomtestcard1.out
+	gcov dominion.c >> randomtestcard1.out
+	echo
+	gcov dominion.c -b -f >> randomtestcard1.out
 
-playdom: dominion.o playdom.c
-	gcc -o playdom playdom.c -g dominion.o rngs.o $(CFLAGS)
-
-testDrawCard: testDrawCard.c dominion.o rngs.o
-	gcc -o testDrawCard -g  testDrawCard.c dominion.o rngs.o $(CFLAGS)
-
-badTestDrawCard: badTestDrawCard.c dominion.o rngs.o
-	gcc -o badTestDrawCard -g  badTestDrawCard.c dominion.o rngs.o $(CFLAGS)
-
-testBuyCard: testDrawCard.c dominion.o rngs.o
-	gcc -o testDrawCard -g  testDrawCard.c dominion.o rngs.o $(CFLAGS)
-
-testAll: dominion.o testSuite.c
-	gcc -o testSuite testSuite.c -g  dominion.o rngs.o $(CFLAGS)
-
-interface.o: interface.h interface.c
-	gcc -c interface.c -g  $(CFLAGS)
-
-runtests: testDrawCard 
-	./testDrawCard &> unittestresult.out
-	gcov dominion.c >> unittestresult.out
-	cat dominion.c.gcov >> unittestresult.out
-
-
-player: player.c interface.o
-	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
-
-all: playdom player testDrawCard testBuyCard badTestDrawCard
-
+	echo "Result for running randomtestcard2:" > randomtestcard2.out
+	gcc -o randomtestcard2 randomtestcard2.c dominion.c rngs.c assertTrue.c $(CFLAGS)
+	randomtestcard2 >> randomtestcard2.out
+	gcov dominion.c >> randomtestcard2.out
+	echo
+	gcov dominion.c -b -f >> randomtestcard2.out
 clean:
-	rm -f *.o playdom.exe playdom test.exe test player player.exe testInit testInit.exe *.gcov *.gcda *.gcno *.so
+	rm -f randomtestcard1.out randomtestadventurer.out randomtestcard2
+	
+cleanall:
+	rm -f randomtestcard1.out randomtestadventurer.out randomtestadventurer randomtestcard1 randomtestcard2 *.gcda *.gcno *.gcov
